--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -48,9 +48,9 @@
 
     <CalendarView
         android:id="@+id/calendarView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="152dp"
+        android:layout_width="85dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="16dp"
         android:background="#7AE7E7E7"
         android:foregroundGravity="fill_horizontal|top"
         android:longClickable="false"
@@ -60,7 +60,6 @@
         android:weekNumberColor="@color/white"
         android:weekSeparatorLineColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -75,12 +74,12 @@
         android:layout_width="257dp"
         android:layout_height="77dp"
         android:layout_marginStart="76dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="47dp"
         android:text="@string/abrir_torno"
         android:textAlignment="viewStart"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView2" />
+        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerViewCalendario" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -126,5 +125,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TextSizeCheck" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerViewCalendario"
+        android:name="es.etg.dam.pmdm13.gym.Calendario"
+        android:layout_width="350dp"
+        android:layout_height="339dp"
+        android:layout_marginTop="152dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerViewQr"
+        android:name="es.etg.dam.pmdm13.gym.codQr"
+        android:layout_width="350dp"
+        android:layout_height="339dp"
+        android:layout_marginTop="152dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
