--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/clsTorno"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondoandroid"
@@ -46,28 +46,10 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
 
-    <CalendarView
-        android:id="@+id/calendarView2"
-        android:layout_width="85dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="16dp"
-        android:background="#7AE7E7E7"
-        android:foregroundGravity="fill_horizontal|top"
-        android:longClickable="false"
-        android:theme="@style/Base.Theme.Gym"
-        android:visibility="visible"
-        android:weekDayTextAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:weekNumberColor="@color/white"
-        android:weekSeparatorLineColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="btmTorno,imageView" />
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/btmTorno"
@@ -75,11 +57,12 @@
         android:layout_height="77dp"
         android:layout_marginStart="76dp"
         android:layout_marginTop="47dp"
+        android:onClick="abrirTorno"
         android:text="@string/abrir_torno"
         android:textAlignment="viewStart"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerViewCalendario" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -126,26 +109,40 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TextSizeCheck" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerViewCalendario"
-        android:name="es.etg.dam.pmdm13.gym.Calendario"
-        android:layout_width="350dp"
-        android:layout_height="339dp"
-        android:layout_marginTop="152dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+    <Button
+        android:id="@+id/btnClose"
+        android:layout_width="257dp"
+        android:layout_height="77dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="47dp"
+        android:onClick="cerrarTorno"
+        android:text="@string/cerrar_torno"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerViewQr"
-        android:name="es.etg.dam.pmdm13.gym.codQr"
+    <FrameLayout
+        android:id="@+id/frameLayout3"
         android:layout_width="350dp"
         android:layout_height="339dp"
         android:layout_marginTop="152dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerViewCalendario"
+            android:name="es.etg.dam.pmdm13.gym.fragmentos.Calendario"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerViewQr"
+            android:name="es.etg.dam.pmdm13.gym.fragmentos.codQr"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible" />
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
