--- a/app/src/main/res/layout/fragment_calendario.xml
+++ b/app/src/main/res/layout/fragment_calendario.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".Calendario">
+    tools:context=".fragmentos.Calendario">
 
     <CalendarView
         android:id="@+id/calendario"
