--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -17,7 +17,7 @@
         android:layout_height="77dp"
         android:layout_marginStart="76dp"
         android:layout_marginTop="44dp"
-        android:onClick="mensajeError"
+        android:onClick="avanzarSGM"
         android:text="@string/seleccionar_ejercicio"
         android:textAlignment="center"
         android:textSize="22sp"
