--- a/app/src/main/res/layout/elemento_rw_grid.xml
+++ b/app/src/main/res/layout/elemento_rw_grid.xml
@@ -35,7 +35,7 @@
             android:padding="4dp"
             android:text="@string/app_name"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textStyle="bold"
             tools:ignore="RtlCompat" />
 
